improved loading speed for playback